fixed spacing for product chooser on look editor

--- a/apparelrow/sass/src/partials/_look.sass
+++ b/apparelrow/sass/src/partials/_look.sass
@@ -206,12 +206,11 @@ body.look-editor
 
 #product-chooser
   overflow: hidden
-  max-width: 814px // 6 columns of products
+  max-width: 822px // 6 columns of products
   min-width: 418px // 3 columns of products
-  padding-left: 10px
+  padding-left: 20px
   #product-tabs
     height: 50px
-    margin-left: 10px
     border-bottom: 1px solid $easiest_color
     li
       display: inline-block
